--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -71,11 +71,14 @@
         app:layout_constraintTop_toBottomOf="@+id/etPasswordTwo" />
 
     <TextView
+        android:id="@+id/tvToLoginScreen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textSize="16sp"
         android:text="Already a learner on EdPub. Log In."
+        android:textColor="@color/purple_200"
+        android:clickable="true"
         app:layout_constraintTop_toBottomOf="@+id/bSignUp" />
 
 
