--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,8 +13,9 @@
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbHomeToolBar"
+            android:id="@+id/tbProfileToolBar"
             app:title="Profile"
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"/>
