--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -7,13 +7,13 @@
     tools:context=".ExampleActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/ablChapterAppBar"
+        android:id="@+id/ablExampleAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbChapterToolBar"
+            android:id="@+id/tbExampleToolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
@@ -29,7 +29,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/ablChapterAppBar" />
+        app:layout_constraintTop_toBottomOf="@+id/ablExampleAppBar" />
 
     <TextView
         android:id="@+id/tvChapterText"
