--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -6,30 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ChapterActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/ablChapterAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbChapterToolBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-            android:background="@color/white"/>
-    </com.google.android.material.appbar.AppBarLayout>
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="25dp"
         android:hint="Chapter Title"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/ablChapterAppBar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvChapterText"
