--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -6,36 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ExampleActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/ablExampleAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbExampleToolBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-            android:background="@color/white"/>
-    </com.google.android.material.appbar.AppBarLayout>
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Chapter Title"
+        android:layout_marginTop="25dp"
+        android:hint="Example Title"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/ablExampleAppBar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvChapterText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Chapter Text"
+        android:hint="Example Text"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
@@ -49,6 +35,6 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@+id/tvChapterText"
-        android:hint="Chapter Code"/>
+        android:hint="Example Code"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
