--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/major_background"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
@@ -31,7 +32,7 @@
         app:cardCornerRadius="5dp"
         android:layout_marginLeft="20dp"
         app:layout_constraintTop_toBottomOf="@id/ablProfileScreenAppBar"
-        android:layout_height="100dp">
+        android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -52,6 +53,7 @@
                 android:hint="Email"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvUserName"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
