--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/major_background"
     tools:context=".UpdateProfileActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/ablUpdateProfileScreenAppBar"
@@ -21,17 +22,32 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <Button
-        android:id="@+id/bToChangeName"
+        android:id="@+id/bLogOut"
         android:layout_width="match_parent"
+        android:backgroundTint="@color/white"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:textAllCaps="false"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintTop_toBottomOf="@id/ablUpdateProfileScreenAppBar"
+        android:text="Log Out"/>
+
+    <Button
+        android:id="@+id/bToChangeName"
+        android:layout_width="match_parent"
+        android:backgroundTint="@color/white"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:textAllCaps="false"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        app:layout_constraintTop_toBottomOf="@id/bLogOut"
         android:text="Change Name"/>
     <Button
         android:id="@+id/bToChangePassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:backgroundTint="@color/white"
         android:layout_margin="20dp"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintTop_toBottomOf="@id/bToChangeName"
@@ -40,7 +56,9 @@
         android:id="@+id/bToDeleteAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
         android:layout_margin="20dp"
+        android:textAllCaps="false"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintTop_toBottomOf="@id/bToChangePassword"
         android:text="Delete Account"/>
