--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="icon_inactive">#676667</color>
+    <color name="major_background">#f8f8fa</color>
+    <color name="light_blue_background">#cdddfe</color>
 </resources>
