--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangeNameActivity">
+    tools:context=".DeleteAccountActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/ablChangeName"
+        android:id="@+id/ablDeleteAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbChangeName"
-            app:title="Change Password"
+            android:id="@+id/tbDeleteAccount"
+            app:title="Delete Account"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
         android:hint="Email"
         android:layout_height="wrap_content"
         android:ems="10"
-        app:layout_constraintTop_toBottomOf="@+id/ablChangeName"
+        app:layout_constraintTop_toBottomOf="@+id/ablDeleteAccount"
         android:inputType="textEmailAddress" />
     <EditText
         android:id="@+id/etPassword"
@@ -41,25 +41,15 @@
         android:ems="10"
         app:layout_constraintTop_toBottomOf="@+id/etUserEmail"
         android:inputType="textPassword" />
-    <EditText
-        android:id="@+id/etNewName"
-        android:layout_width="match_parent"
-        android:layout_margin="20dp"
-        android:minHeight="48dp"
-        android:hint="New Name"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
-        android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/bChangeName"
+        android:id="@+id/bToDeleteAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
         android:layout_margin="20dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNewName"
-        android:text="Change Name" />
+        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        android:text="Delete Account" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
