--- a/app/src/main/res/layout/activity_change_name.xml
+++ b/app/src/main/res/layout/activity_change_name.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbChangeName"
-            app:title="Change Password"
+            app:title="Change Name"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
