--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -22,34 +22,22 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <EditText
-        android:id="@+id/etUserEmail"
+        android:id="@+id/etDeleteReason"
         android:layout_width="match_parent"
         android:layout_margin="20dp"
         android:minHeight="48dp"
-        android:hint="Email"
+        android:hint="Reason"
         android:layout_height="wrap_content"
-        android:ems="10"
-        app:layout_constraintTop_toBottomOf="@+id/ablDeleteAccount"
-        android:inputType="textEmailAddress" />
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="match_parent"
-        android:layout_margin="20dp"
-        android:minHeight="48dp"
-        android:hint="Password"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        app:layout_constraintTop_toBottomOf="@+id/etUserEmail"
-        android:inputType="textPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/ablDeleteAccount" />
 
     <Button
-        android:id="@+id/bToDeleteAccount"
+        android:id="@+id/bDeleteAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
         android:layout_margin="20dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        app:layout_constraintTop_toBottomOf="@+id/etDeleteReason"
         android:text="Delete Account" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
