--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,9 +43,9 @@
                 app:cardCornerRadius="40dp"
                 android:elevation="0dp"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_width="80dp">
@@ -109,7 +109,7 @@
             <View
                 android:id="@+id/vTerms"
                 android:layout_width="match_parent"
-                android:background="@color/purple_200"
+                android:background="@color/major_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvTermsConditions"
@@ -124,7 +124,7 @@
             <View
                 android:id="@+id/vPrivacy"
                 android:layout_width="match_parent"
-                android:background="@color/purple_200"
+                android:background="@color/major_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvPrivacyPolicy"
@@ -139,7 +139,7 @@
             <View
                 android:id="@+id/vFeedback"
                 android:layout_width="match_parent"
-                android:background="@color/purple_200"
+                android:background="@color/major_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvFeedback"
@@ -154,7 +154,7 @@
             <View
                 android:id="@+id/vShare"
                 android:layout_width="match_parent"
-                android:background="@color/purple_200"
+                android:background="@color/major_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvShare"
@@ -169,7 +169,7 @@
             <View
                 android:id="@+id/vRate"
                 android:layout_width="match_parent"
-                android:background="@color/purple_200"
+                android:background="@color/major_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvRateUs"
