--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/major_background"
     android:layout_height="match_parent"
     tools:context=".DeleteAccountActivity">
 
@@ -21,14 +22,25 @@
             android:background="@color/white"/>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <EditText
-        android:id="@+id/etDeleteReason"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_margin="20dp"
-        android:minHeight="48dp"
-        android:hint="Reason"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/ablDeleteAccount" />
+        android:id="@+id/cvReason"
+        app:cardCornerRadius="5dp"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/ablDeleteAccount">
+        <EditText
+            android:id="@+id/etDeleteReason"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="10"
+            android:gravity="top|left"
+            android:layout_margin="15dp"
+            android:background="@null"
+            android:hint="Let us know why are you leaving.\nWe will try to improve." />
+    </androidx.cardview.widget.CardView>
+
+
 
     <Button
         android:id="@+id/bDeleteAccount"
@@ -37,7 +49,7 @@
         android:textAllCaps="false"
         android:layout_margin="20dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDeleteReason"
+        app:layout_constraintTop_toBottomOf="@+id/cvReason"
         android:text="Delete Account" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
