--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -22,23 +22,19 @@
             android:background="@color/white"/>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cvReason"
-        app:cardCornerRadius="5dp"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/ablDeleteAccount">
+
         <EditText
             android:id="@+id/etDeleteReason"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="10"
+            android:padding="20dp"
             android:gravity="top|left"
+            app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount"
             android:layout_margin="15dp"
-            android:background="@null"
+            android:background="@drawable/feedback_background"
             android:hint="Let us know why are you leaving.\nWe will try to improve." />
-    </androidx.cardview.widget.CardView>
+
 
 
 
@@ -49,7 +45,7 @@
         android:textAllCaps="false"
         android:layout_margin="20dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cvReason"
+        app:layout_constraintTop_toBottomOf="@+id/etDeleteReason"
         android:text="Delete Account" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
