Everything fine except fav.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/major_background"
     android:layout_width="match_parent"
+    android:isScrollContainer="true"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
