--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,6 +42,18 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         app:layout_constraintTop_toBottomOf="@id/tvExamples"/>
+    <TextView
+        android:id="@+id/tvAdFree"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ad Free"
+        android:textSize="25sp"
+        android:drawableLeft="@drawable/ic_star"
+        android:drawablePadding="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tvFavourites"/>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
