Fav are fine now.

--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/chapter_background"
     tools:context=".ChapterActivity">
 
     <TextView
@@ -40,7 +41,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cvBottomItems"
         android:layout_width="0dp"
-        app:cardBackgroundColor="@android:color/transparent"
+        app:cardBackgroundColor="@color/white"
         android:layout_height="60dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
