--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +7,14 @@
     tools:context=".HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
@@ -128,10 +132,8 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvRandomExample"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="5dp"
@@ -144,23 +146,19 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <androidx.cardview.widget.CardView
+            <ImageView
                 android:id="@+id/cvExampleImage"
                 android:layout_width="48dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="15dp"
-                android:elevation="0dp"
+                android:src="@drawable/ic_code_example"
                 app:cardCornerRadius="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_height="48dp">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:padding="4dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_code_example"/>
 
-            </androidx.cardview.widget.CardView>
+
+            </ImageView>
 
             <TextView
                 android:id="@+id/tvTestYourLearning"
@@ -190,7 +188,7 @@
                 android:id="@+id/bToRandomExample"
                 android:layout_width="match_parent"
                 android:layout_marginTop="10dp"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:textAllCaps="false"
@@ -204,4 +202,38 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/ivWrite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_write"
+            app:layout_constraintTop_toBottomOf="@+id/cvRandomExample"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="25dp"
+            app:layout_constraintRight_toRightOf="parent"/>
+        <TextView
+            android:id="@+id/tvWrite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivWrite"
+            android:text="Contribute by WRITING"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/primaryColor"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/contribute_background"
+            android:textSize="25sp"
+            android:gravity="center"
+            android:text="CONTRIBUTE"
+            app:layout_constraintTop_toBottomOf="@id/tvWrite"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
